--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import org.flywaydb.gradle.task.FlywayMigrateTask
 
 buildscript {
     dependencies {
-        classpath 'mysql:mysql-connector-java'
+        classpath 'mysql:mysql-connector-java:8.0.19'
     }
 }
 
